--- a/force-app/main/default/classes/CaseTriggerHandler.cls
+++ b/force-app/main/default/classes/CaseTriggerHandler.cls
@@ -42,6 +42,7 @@ public without sharing class CaseTriggerHandler {
         CaseTriggerHelper.validacionAceptaInstalacionParche(newCaseList, oldCaseMap);
         CaseTriggerHelper.validacionAceptaPaseProduccion(newCaseList, oldCaseMap);
         CaseTriggerHelper.validacionIngProducto(newCaseList, oldCaseMap);
+        CaseTriggerHelper.llenarOrigen(newCaseList, oldCaseMap);
         
     }
     
