--- a/force-app/main/default/classes/ControladorCrearCaso.cls
+++ b/force-app/main/default/classes/ControladorCrearCaso.cls
@@ -86,6 +86,9 @@ public without sharing class ControladorCrearCaso {
             }else{
                 caso.OwnerId = [Select Id from Group Where DeveloperName = :(esCore ? CaseTriggerHelper.COLA_ATENCION_N1_CORE : CaseTriggerHelper.COLA_ATENCION_N1_OMNIA) and Type = 'Queue'].Id;
             }
+            caso.FS_OrigenCaso__c = 'Web';
+            caso.FS_SubEstado__c = 'Apertura de caso';
+            caso.Origin = caso.FS_SubEstado__c;
             for(PickListOption item: (List<PickListOption>) JSON.deserialize(archivosJSON, List<PickListOption>.class)){
                 listContentDocumentId.add(item.value);
             }
