--- a/force-app/main/default/classes/ControladorCrearCaso.cls
+++ b/force-app/main/default/classes/ControladorCrearCaso.cls
@@ -76,11 +76,11 @@ public without sharing class ControladorCrearCaso {
         Boolean crearCaso = String.isBlank(caso.Id);
         if(crearCaso){
             user usuario = [Select Contact.Account.FS_Carterizacion__c, Contact.Account.FS_ServicioRemoto__c, Contact.Account.FS_ColaAtencion__c, Contact.Account.FS_CorreosNotificacionesServicios__c  from User  Where Id = :userInfo.getUserId()];
-            Boolean esCore = caso.FS_Producto__c == 'FISA System' || caso.FS_Producto__c == 'FISA Credit Card' ;
+            Boolean esCore = CaseTriggerHelper.ProductoCore(caso);
             caso.FS_Area__c = esCore ? 'N1. CORE' : 'N1. OMNIA';
             caso.FS_Carterizacion__c = usuario.Contact.Account.FS_Carterizacion__c;
             caso.FS_CorreosNotificacionesServicios__c = usuario.Contact.Account.FS_CorreosNotificacionesServicios__c;
-            //caso.EntitlementId = CaseTriggerHelper.entitlementCaseId(caso.RecordTypeId);
+            caso.EntitlementId = CaseTriggerHelper.entitlementCaseId(caso.RecordTypeId);
             if(usuario.Contact.Account.FS_ServicioRemoto__c){
                 caso.OwnerId = [Select Id from Group Where DeveloperName = :usuario.Contact.Account.FS_ColaAtencion__c and Type = 'Queue'].Id;
             }else{
